ico and caption DONE

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8" />
     <title>Mendeleevs's table</title>
     <link href="css.css" rel="stylesheet" />
+    <link rel="icon" href="bottle.ico" type="image/x-icon">
 </head>
 <body>
     <table align="center" style="border-color: aliceblue" border="1" cellspacing="0">
-        <caption style="white-space: nowrap">Периодическая система химических элементов Д. И. Менделеева</caption>
+        <caption style="white-space: nowrap" >Периодическая система химических элементов Д. И. Менделеева <br /></caption>
         <thead>
             <tr>
                 <th rowspan="2">периоды</th>
